updated darpa gains

--- a/config/uav/f550_darpa/gain_manager/gain_manager.yaml
+++ b/config/uav/f550_darpa/gain_manager/gain_manager.yaml
@@ -41,5 +41,5 @@ gain_management:
     RTK: "optflow"
     OPTFLOWGPS: "optflow"
     GPS: "optflow"
-    OPTFLOW: "optflow_dark"
+    OPTFLOW: "optflow"
     OTHER: "optflow"
