--- a/config/uav/f550_darpa/control_manager.yaml
+++ b/config/uav/f550_darpa/control_manager.yaml
@@ -49,6 +49,12 @@ safety:
     tilt_error_threshold: 40 # [deg]
     min_height: 0.5 # [m]
 
+  rc_eland:
+
+    enabled: true
+    channel_number: 8 # [-]
+    threshold: 1500 # [us]
+
 obstacle_bumper:
 
   enabled: true
