--- a/config/uav/naki/control_manager.yaml
+++ b/config/uav/naki/control_manager.yaml
@@ -31,8 +31,8 @@ safety:
   tilt_limit_eland: 60 # [deg]
   tilt_limit_disarm: 90 # [deg]
 
-  control_error_eland: 1.0 # [m]
-  control_error_failsafe: 2.0 # [m]
+  control_error_eland: 1.5 # [m]
+  control_error_failsafe: 2.5 # [m]
 
   # - this tracker will be used for calling the emergancy hover routine
   ehover_tracker: "mrs_trackers/LandoffTracker"
@@ -48,7 +48,7 @@ safety:
   tilt_error_failsafe:
 
     enabled: true
-    tilt_error_threshold: 30 # [deg]
+    tilt_error_threshold: 40 # [deg]
     min_height: 0.5 # [m]
 
   rc_eland:
@@ -59,7 +59,7 @@ safety:
 
 obstacle_bumper:
 
-  enabled: true
+  enabled: false
   timer_rate: 20 # [Hz]
 
   horizontal_distance: 1.0 # [m]
