--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,7 @@
   <build_depend>mrs_msgs</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>mrs_lib</build_depend>
+  <build_depend>mavros_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -28,6 +29,7 @@
   <run_depend>mrs_msgs</run_depend>
   <run_depend>nodelet</run_depend>
   <run_depend>mrs_lib</run_depend>
+  <run_depend>mavros_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
