--- a/config/uav/f550/constraint_manager/constraint_manager.yaml
+++ b/config/uav/f550/constraint_manager/constraint_manager.yaml
@@ -41,6 +41,6 @@ constraint_management:
     ICP: "slow"
     RTK: "slow"
     OPTFLOWGPS: "slow"
-    GPS: "slow"
+    GPS: "medium"
     OPTFLOW: "slow"
     OTHER: "slow"
