--- a/package.xml
+++ b/package.xml
@@ -1,37 +1,27 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
 
   <name>mrs_uav_manager</name>
   <version>1.0.0</version>
   <description>The mrs_uav_manager package</description>
 
+  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
   <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
 
-  <license>TODO</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>cmake_modules</build_depend>
-  <build_depend>mrs_msgs</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>mrs_lib</build_depend>
-  <build_depend>mavros_msgs</build_depend>
+  <depend>roscpp</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>cmake_modules</depend>
+  <depend>mrs_msgs</depend>
+  <depend>nodelet</depend>
+  <depend>mrs_lib</depend>
+  <depend>mavros_msgs</depend>
 
-  <run_depend>roscpp</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>cmake_modules</run_depend>
-  <run_depend>mrs_msgs</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>mrs_lib</run_depend>
-  <run_depend>mavros_msgs</run_depend>
-
-  <!-- The export tag contains other, unspecified, tags -->
   <export>
     <nodelet plugin="${prefix}/plugins.xml" />
     <mrs_uav_manager plugin="${prefix}/null_tracker.xml" />
