--- a/config/uav/f550_darpa/control_manager.yaml
+++ b/config/uav/f550_darpa/control_manager.yaml
@@ -12,6 +12,7 @@ controllers : [
   "mrs_controllers/So3Controller",
   "mrs_controllers/FailsafeController",
   "mrs_controllers/AttitudeController",
+  "mrs_controllers/MpcController",
 ]
 
 # - this is the "do nothing tracker", which is active when no other is
