--- a/config/simulation/gain_manager/gain_manager.yaml
+++ b/config/simulation/gain_manager/gain_manager.yaml
@@ -1,6 +1,7 @@
 rate: 25
 
 estimator_types: [
+  "HECTOR",
   "T265",
   "OBJECT",
   "VIO",
@@ -23,6 +24,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
+    HECTOR: ["soft", "supersoft", "tight", "optflow"]
     T265: ["soft", "supersoft", "tight"]
     OBJECT: ["supersoft"]
     VIO: ["supersoft"]
@@ -36,6 +38,7 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
+    HECTOR: "optflow"
     T265: "soft"
     OBJECT: "supersoft"
     VIO: "supersoft"
