--- a/config/simulation/uav_manager.yaml
+++ b/config/simulation/uav_manager.yaml
@@ -1,7 +1,7 @@
 null_tracker: "mrs_uav_manager/NullTracker"
 
 # require gain or constraint manager runnign to takeoff?
-require_gain_manager: true
+require_gain_manager: false
 require_constraint_manager: true
 
 max_height_checking:
