--- a/config/uav/eagle/control_manager.yaml
+++ b/config/uav/eagle/control_manager.yaml
@@ -2,18 +2,16 @@
 # - trackers follow the mrs_uav_manager/Tracker.h interface
 trackers : [
   "mrs_trackers/LandoffTracker",
-  "mrs_trackers/LineTracker",
   "mrs_trackers/MpcTracker",
-  "mrs_trackers/JoyTracker",
+  "mrs_trackers/LineTracker",
 ]
 
 # - list of names of dynamically loaded controllers
 # - controllers follow the mrs_uav_manager/Controller.h interface
 controllers : [
+  "mrs_controllers/MpcController",
   "mrs_controllers/So3Controller",
-  "mrs_controllers/NsfController",
   "mrs_controllers/FailsafeController",
-  "mrs_controllers/AttitudeController",
 ]
 
 # - this is the "do nothing tracker", which is active when no other is
@@ -34,11 +32,16 @@ safety:
   control_error_eland: 1.5 # [m]
   control_error_failsafe: 2.5 # [m]
 
-  # - this tracker will be used for calling the emergancy hover routine
+  # tracker used for emergancy hover routine
   ehover_tracker: "mrs_trackers/LandoffTracker"
 
-  # - this controller will be used for emergancy landing
+  # controller used for safety landing (feed forward)
   failsafe_controller: "mrs_controllers/FailsafeController"
+
+  # controller used for emergancy (controller) landing
+  eland_controller: "mrs_controllers/MpcController"
+
+  # after not receiving odometry for more than this, the failsafe landing will trigger
   odometry_max_missing_time: 0.1 # [s]
 
   elanding_timer_rate: 10
