--- a/config/uav/f550_darpa/uav_manager.yaml
+++ b/config/uav/f550_darpa/uav_manager.yaml
@@ -1,7 +1,7 @@
 null_tracker: "mrs_uav_manager/NullTracker"
 
 # require gain or constraint manager runnign to takeoff?
-require_gain_manager: true
+require_gain_manager: false
 require_constraint_manager: true
 
 max_height_checking:
@@ -10,9 +10,15 @@ max_height_checking:
   safety_height_offset: 0.5 # how much lower to descend bellow the max height
 
 takeoff:
+
   rate: 10 # [Hz]
+
   takeoff_tracker: "mrs_trackers/LandoffTracker"
-  after_takeoff_tracker: "mrs_trackers/MpcTracker"
+  takeoff_controller: "mrs_controllers/MpcController"
+
+  after_takeoff:
+    tracker: "mrs_trackers/MpcTracker"
+    controller: "mrs_controllers/MpcController"
 
   takeoff_height: 1.2
 
@@ -25,13 +31,13 @@ landing:
 
   # those two must apply simultaneously
   landing_cutoff_height:  0.5
-  landing_cutoff_mass_factor:  0.3 # how much light does the drone appear to be?
+  landing_cutoff_mass_factor:  0.5 # how much light does the drone appear to be?
 
   disarm: true
 
 flight_timer:
 
-  enabled: true
+  enabled: false
   rate: 1 # [Hz]
   max_time: 300.0 # [s]
 
