--- a/config/uav/f550_darpa/control_manager.yaml
+++ b/config/uav/f550_darpa/control_manager.yaml
@@ -89,5 +89,11 @@ joystick:
   joystick_timer_rate: 30 # [Hz]
 
 rc_joystick:
+
   enabled: false
-  channel_number: 8
+  channel_number: 5 # indexed from 0
+
+  # switch the chanel repeatedly to enable the joystic control
+  # n_switches need to occur within a time timeout
+  timeout: 2.0 # [s]
+  n_switches: 5 # [-]
