added configs for f450 hector

--- a/config/uav/f450/constraint_manager/constraint_manager.yaml
+++ b/config/uav/f450/constraint_manager/constraint_manager.yaml
@@ -10,6 +10,7 @@ estimator_types: [
   "GPS",
   "OPTFLOW",
   "OTHER",
+  "HECTOR",
 ]
 
 constraints: [
@@ -31,6 +32,7 @@ constraint_management:
     GPS: ["slow", "medium", "fast"]
     OPTFLOW: ["slow"]
     OTHER: ["slow"]
+    HECTOR: ["slow"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
@@ -44,3 +46,4 @@ constraint_management:
     GPS: "medium"
     OPTFLOW: "slow"
     OTHER: "slow"
+    HECTOR: "slow"
