fixed the rc joystic mode

--- a/config/uav/f550/control_manager.yaml
+++ b/config/uav/f550/control_manager.yaml
@@ -84,7 +84,7 @@ joystick:
 
 rc_joystick:
 
-  enabled: false
+  enabled: true
   channel_number: 6 # indexed from 0
 
   # switch the chanel repeatedly to enable the joystic control
