--- a/config/uav/f550/uav_manager.yaml
+++ b/config/uav/f550/uav_manager.yaml
@@ -14,7 +14,7 @@ takeoff:
   rate: 10 # [Hz]
 
   takeoff_tracker: "LandoffTracker"
-  takeoff_controller: "So3Controller"
+  takeoff_controller: "MpcController"
 
   after_takeoff:
     tracker: "MpcTracker"
