fixed race condition in  switching controllers

--- a/config/uav/f550/constraint_manager/constraint_manager.yaml
+++ b/config/uav/f550/constraint_manager/constraint_manager.yaml
@@ -43,7 +43,7 @@ constraint_management:
     ICP: "slow"
     RTK: "slow"
     OPTFLOWGPS: "slow"
-    GPS: "medium"
+    GPS: "slow"
     OPTFLOW: "slow"
     HECTOR: "slow"
     OTHER: "slow"
