--- a/config/uav/f550/uav_manager.yaml
+++ b/config/uav/f550/uav_manager.yaml
@@ -33,7 +33,7 @@ landing:
   landing_cutoff_height:  0.5
   landing_cutoff_mass_factor:  0.5 # how much light does the drone appear to be?
 
-  disarm: true
+  disarm: false
 
 flight_timer:
 
