--- a/config/simulation/trackers.yaml
+++ b/config/simulation/trackers.yaml
@@ -7,6 +7,9 @@ LandoffTracker:
 LineTracker:
   address: "mrs_trackers/LineTracker"
 
+WallTracker:
+  address: "mrs_trackers/WallTracker"
+
 JoyTracker:
   address: "mrs_trackers/JoyTracker"
 
