--- a/config/simulation/control_manager.yaml
+++ b/config/simulation/control_manager.yaml
@@ -49,7 +49,7 @@ safety:
 
   tilt_error_failsafe:
 
-    enabled: true
+    enabled: false
     tilt_error_threshold: 30 # [deg]
     min_height: 0.5 # [m]
 
