--- a/config/uav/eagle/control_manager.yaml
+++ b/config/uav/eagle/control_manager.yaml
@@ -45,7 +45,7 @@ safety:
 
   tilt_error_failsafe:
 
-    enabled: true
+    enabled: false
     tilt_error_threshold: 45 # [deg]
     min_height: 0.5 # [m]
 
