--- a/config/uav/f550_darpa/control_manager.yaml
+++ b/config/uav/f550_darpa/control_manager.yaml
@@ -46,7 +46,7 @@ safety:
 
   tilt_error_failsafe:
 
-    enabled: true
+    enabled: false
     tilt_error_threshold: 30 # [deg]
     min_height: 0.5 # [m]
 
