--- a/config/uav/t650/control_manager.yaml
+++ b/config/uav/t650/control_manager.yaml
@@ -47,7 +47,7 @@ safety:
 
   tilt_error_failsafe:
 
-    enabled: true
+    enabled: false
     tilt_error_threshold: 40 # [deg]
     min_height: 0.5 # [m]
 
