switch takeoff tracker for naki

--- a/config/uav/naki/uav_manager.yaml
+++ b/config/uav/naki/uav_manager.yaml
@@ -14,11 +14,11 @@ takeoff:
   rate: 10 # [Hz]
 
   takeoff_tracker: "LandoffTracker"
-  takeoff_controller: "So3Controller"
+  takeoff_controller: "MpcController"
 
   after_takeoff:
     tracker: "MpcTracker"
-    controller: "So3Controller"
+    controller: "MpcController"
 
   takeoff_height: 2.0
 
