--- a/config/simulation/control_manager.yaml
+++ b/config/simulation/control_manager.yaml
@@ -94,3 +94,9 @@ rc_joystick:
   # n_switches need to occur within a time timeout
   timeout: 2.0 # [s]
   n_switches: 5 # [-]
+
+  channels:
+    pitch: 2
+    roll: 0
+    yaw: 3
+    thrust: 1
