--- a/config/uav/f550/control_manager.yaml
+++ b/config/uav/f550/control_manager.yaml
@@ -35,7 +35,7 @@ safety:
   failsafe_controller: "FailsafeController"
 
   # controller used for emergancy (controller) landing
-  eland_controller: "So3Controller"
+  eland_controller: "MpcController"
 
   # after not receiving odometry for more than this, the failsafe landing will trigger
   odometry_max_missing_time: 0.1 # [s]
