switched to so3 controller after takeoff

--- a/config/simulation/uav_manager.yaml
+++ b/config/simulation/uav_manager.yaml
@@ -18,7 +18,7 @@ takeoff:
 
   after_takeoff:
     tracker: "MpcTracker"
-    controller: "MpcController"
+    controller: "So3Controller"
 
   takeoff_height: 2.0
 
