--- a/config/uav/f550/uav_manager.yaml
+++ b/config/uav/f550/uav_manager.yaml
@@ -19,9 +19,9 @@ takeoff:
 
   after_takeoff:
     tracker: "MpcTracker"
-    controller: "MpcController"
+    controller: "So3Controller"
 
-  takeoff_height: 1.5
+  takeoff_height: 2.0
 
   ground_limit_height: 0.5 # under which height the takeoff can happen
 
