--- a/config/simulation/constraint_manager/constraint_manager.yaml
+++ b/config/simulation/constraint_manager/constraint_manager.yaml
@@ -1,9 +1,10 @@
 rate: 25
 
 estimator_types: [
+  "BRICKFLOW",
   "HECTOR",
   "T265",
-  "OBJECT",
+  "BRICK",
   "VIO",
   "ICP",
   "RTK",
@@ -24,9 +25,11 @@ constraint_management:
 
   # list of allowed gains per odometry mode
   allowed_constraints:
+    BRICKFLOW: ["slow", "medium", "fast", "darpa"]
+    OPTFLOW: ["slow", "medium", "fast", "darpa"]
     HECTOR: ["slow", "medium", "fast", "darpa"]
     T265: ["slow", "medium", "fast"]
-    OBJECT: ["slow"]
+    BRICK: ["slow"]
     VIO: ["slow"]
     ICP: ["slow", "darpa"]
     RTK: ["slow", "medium", "fast", "darpa"]
@@ -38,9 +41,10 @@ constraint_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_constraints:
+    BRICKFLOW: "slow"
     HECTOR: "darpa"
     T265: "slow"
-    OBJECT: "slow"
+    BRICK: "slow"
     VIO: "slow"
     ICP: "darpa"
     RTK: "medium"
