arming after landing is TRUE by default, switching to MPC controller after takeoff

--- a/config/uav/f450/uav_manager.yaml
+++ b/config/uav/f450/uav_manager.yaml
@@ -19,7 +19,7 @@ takeoff:
 
   after_takeoff:
     tracker: "MpcTracker"
-    controller: "So3Controller"
+    controller: "MpcController"
 
   takeoff_height: 1.5
 
