--- a/config/simulation/control_manager.yaml
+++ b/config/simulation/control_manager.yaml
@@ -14,6 +14,7 @@ controllers : [
   "MpcController",
   "NsfController",
   "AttitudeController",
+  "AccelerationController",
   "FailsafeController",
 ]
 
