--- a/config/simulation/trackers.yaml
+++ b/config/simulation/trackers.yaml
@@ -10,6 +10,9 @@ LineTracker:
 JoyTracker:
   address: "mrs_trackers/JoyTracker"
 
+JoyBumperTracker:
+  address: "mrs_trackers/JoyBumperTracker"
+
 MatlabTracker:
   address: "mrs_trackers/MatlabTracker"
 
